# flexi

./: Cargo.toml
client/: Cargo.toml
client/src/: main.rs
messages/: Cargo.toml
messages/src/: client.rs  lib.rs  server.rs
server/: Cargo.toml
server/src/: main.rs  pty.rs
src/: Cargo.toml  main.rs
