[package]
name = "client"
version = "0.1.0"
description = "the client module for the flexi terminal multiplexer"
license = "MIT"
edition = "2021"

[dependencies]
crossterm = { version = "0.29.0", features = ["use-dev-tty"] }
nix = { version = "0.30.1", features = ["fs", "poll"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
messages.workspace = true
