[package]
name = "server"
version = "0.1.0"
description = "the server module for the flexi terminal multiplexer"
license = "MIT"
edition = "2021"

[dependencies]
nix = { version = "0.30.1", features = ["term", "process", "fs", "poll"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
messages.workspace = true
